--- a/src/main/resources/com/camdevhub/jiratoolbox/fbi.fxml
+++ b/src/main/resources/com/camdevhub/jiratoolbox/fbi.fxml
@@ -13,12 +13,8 @@
 
 <VBox xmlns="http://javafx.com/javafx"
 	xmlns:fx="http://javafx.com/fxml"
-	fx:id="holidaysPane"
-	fx:controller="com.camdevhub.jiratoolbox.controller.HolidaysController"
-	alignment="CENTER"
+	fx:id="fbiPane"
+	fx:controller="com.camdevhub.jiratoolbox.controller.FBIController"
 >
-	
-	<CDHCalendar fx:id="calendar" alignment="CENTER" spacing="10" >
-	</CDHCalendar>
-	<Button text="Send!" onAction="#sendHolidaysToJira" prefWidth="100" prefHeight="20" style="-fx-font-size: 24px;"/>
+	<Label text="TODO" />
 </VBox>
