--- a/src/main/resources/com/camdevhub/jiratoolbox/holidays.fxml
+++ b/src/main/resources/com/camdevhub/jiratoolbox/holidays.fxml
@@ -6,9 +6,10 @@
 <?import javafx.scene.text.Font?>
 
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.ProgressBar?>
+
 <?import com.camdevhub.jiratoolbox.calendar.CDHCalendar?>
 
 <VBox xmlns="http://javafx.com/javafx"
@@ -18,5 +19,10 @@
 	
 	<CDHCalendar fx:id="calendar" alignment="CENTER" spacing="10" >
 	</CDHCalendar>
-	<Button text="Send!" onAction="#sendHolidaysToJira" prefWidth="100" prefHeight="20" style="-fx-font-size: 24px;"/>
+	<FlowPane hgap="10" alignment="CENTER">
+		<Label text="Holiday Task Key: " />
+		<TextField fx:id="issueField" promptText="BLM-XXXX"/>
+		<Button text="Send!" onAction="#sendHolidaysToJira" />
+		<ProgressBar fx:id="worklogProgressBar" progress="0" minWidth="150"/>
+	</FlowPane>
 </VBox>
