--- a/src/main/resources/com/camdevhub/jiratoolbox/primary.fxml
+++ b/src/main/resources/com/camdevhub/jiratoolbox/primary.fxml
@@ -11,7 +11,7 @@
 	fx:id="rootPane"
 >
 	<top>
-		<HBox fx:id="menuPane" alignment="CENTER">
+		<HBox fx:id="menuPane" alignment="CENTER" spacing="10">
 			<padding>
 	        	<Insets top="10" right="20" bottom="10" left="20"/>
 	    	</padding>
