--- a/src/main/resources/com/camdevhub/jiratoolbox/login.fxml
+++ b/src/main/resources/com/camdevhub/jiratoolbox/login.fxml
@@ -11,16 +11,28 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.PasswordField?>
 
+<?import javafx.geometry.Insets?>
+
 <VBox xmlns="http://javafx.com/javafx"
 	xmlns:fx="http://javafx.com/fxml"
 	fx:id="loginPane"
 >
+	<padding>
+		<Insets left="20" right="200" />
+	</padding>
 	<Label text="Username:" />
 	<TextField fx:id="usernameField" text="" />
 	<Label text="Password:" />
 	<PasswordField fx:id="passwordField" text="" />
-	<Label text="URL" />
-	<TextField fx:id="urlField" text="" />
-	<Button text="Check Connection" onAction="#processLogin" />
-	<CheckBox fx:id="rememberCheckbox" text="Remember me"/>
+	<Label text="URL:" />
+	<TextField fx:id="urlField" text="">
+		<VBox.margin>
+			<Insets bottom="10" />
+		</VBox.margin>
+	</TextField>
+	<HBox alignment="CENTER_RIGHT">
+		<Button text="Check Connection" onAction="#processLogin"/>
+		<Region HBox.hgrow="ALWAYS" />
+		<CheckBox fx:id="rememberCheckbox" text="Remember me"/>
+	</HBox>
 </VBox>
